--- a/api/composer.json
+++ b/api/composer.json
@@ -21,7 +21,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.0",
-        "pestphp/pest-plugin-laravel": "^4.0"
+        "pestphp/pest-plugin-laravel": "^4.0",
+        "symfony/yaml": "^7.3"
     },
     "autoload": {
         "psr-4": {
