--- a/api/composer.json
+++ b/api/composer.json
@@ -11,7 +11,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/horizon": "^5.33",
+        "laravel/scout": "^10.19",
+        "laravel/tinker": "^2.10.1",
+        "meilisearch/meilisearch-php": "^1.15"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
