--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   hero-mailhog:
     image: 'mailhog/mailhog:latest'
@@ -75,6 +74,14 @@ services:
       - hero-db
     networks:
       - hero_net
+  hero-db:
+    env_file:
+      - ./api/.env
+    environment:
+      MYSQL_DATABASE: '$${DB_DATABASE}'
+      MYSQL_USER: '$${DB_USERNAME}'
+      MYSQL_PASSWORD: '$${DB_PASSWORD}'
+      MYSQL_ROOT_PASSWORD: '$${DB_ROOT_PASSWORD:-root}'
 volumes:
   meili_data: null
   minio_data: null
