--- a/api/composer.json
+++ b/api/composer.json
@@ -9,12 +9,16 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.3",
         "laravel/framework": "^12.0",
-        "laravel/horizon": "^5.33",
+        "laravel/passport": "*",
+        "laravel/reverb": "^1.0",
         "laravel/scout": "^10.19",
         "laravel/tinker": "^2.10.1",
-        "meilisearch/meilisearch-php": "^1.15"
+        "meilisearch/meilisearch-php": "^1.15",
+        "paragonie/sodium_compat_ext_sodium": "^1.0",
+        "spatie/laravel-permission": "*",
+        "stancl/tenancy": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
